--- a/app/src/main/res/layout/dialpad.xml
+++ b/app/src/main/res/layout/dialpad.xml
@@ -16,44 +16,48 @@
             android:id="@+id/one"
             style="@style/AppCompat.Button.Flat.Common"
             android:onClick="number1"
-            android:text="1" />
+            android:text="1" android:textColor="@color/colorPrimary"/>
 
         <Button
             android:id="@+id/two"
             style="@style/AppCompat.Button.Flat.Common"
             android:onClick="number2"
-            android:text="2" />
+            android:text="2" android:textColor="@color/colorPrimary"/>
 
         <Button
             android:id="@+id/three"
             style="@style/AppCompat.Button.Flat.Common"
             android:onClick="number3"
-            android:text="3" />
+            android:text="3" android:textColor="@color/colorPrimary"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <Button
             android:id="@+id/four"
             style="@style/AppCompat.Button.Flat.Common"
             android:onClick="number4"
-            android:text="4" />
+            android:text="4"
+            android:textColor="@color/colorPrimary"/>
 
         <Button
             android:id="@+id/five"
             style="@style/AppCompat.Button.Flat.Common"
             android:onClick="number5"
-            android:text="5" />
+            android:text="5"
+            android:textColor="@color/colorPrimary"/>
 
         <Button
             android:id="@+id/six"
             style="@style/AppCompat.Button.Flat.Common"
             android:onClick="number6"
-            android:text="6" />
+            android:text="6"
+            android:textColor="@color/colorPrimary"/>
 
     </LinearLayout>
 
@@ -66,19 +70,22 @@
             android:id="@+id/seven"
             style="@style/AppCompat.Button.Flat.Common"
             android:onClick="number7"
-            android:text="7" />
+            android:text="7"
+            android:textColor="@color/colorPrimary"/>
 
         <Button
             android:id="@+id/eight"
             style="@style/AppCompat.Button.Flat.Common"
             android:onClick="number8"
-            android:text="8" />
+            android:text="8"
+            android:textColor="@color/colorPrimary"/>
 
         <Button
             android:id="@+id/nine"
             style="@style/AppCompat.Button.Flat.Common"
             android:onClick="number9"
-            android:text="9" />
+            android:text="9"
+            android:textColor="@color/colorPrimary"/>
 
     </LinearLayout>
 
@@ -91,14 +98,15 @@
             android:id="@+id/zero"
             style="@style/AppCompat.Button.Flat.Common"
             android:onClick="number0"
-            android:text="0" />
+            android:text="0"
+            android:textColor="@color/colorPrimary"/>
 
         <Button
             android:id="@+id/star"
             style="@style/AppCompat.Button.Flat.Common"
             android:onClick="numOk"
             android:text="ok"
-            android:textColor="@color/colorAccent" />
+            android:textColor="@color/colorPrimary" />
 
     </LinearLayout>
 </LinearLayout>
