Tool bar scorrevole

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,9 +29,14 @@
                 android:id="@+id/number_himno"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:gravity="center_vertical"
+                android:marqueeRepeatLimit="marquee_forever"
                 android:paddingLeft="16dp"
                 android:paddingRight="64dp"
+                android:scrollHorizontally="true"
                 android:singleLine="true"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
