--- a/app/src/main/res/layout/panel_up.xml
+++ b/app/src/main/res/layout/panel_up.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <it.trumbl.ilprofeticoDaniele.MarqueeToolbar
+
         android:id="@+id/toolbar_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -22,7 +28,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="@dimen/activity_vertical_margin"
+            android:text="=prova prova"
             android:textColor="@android:color/black" />
     </ScrollView>
 
 </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@color/colorPrimary"
+        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
+        app:fabSize="normal"
+        app:layout_anchor="@id/text_himno"
+        app:layout_anchorGravity="bottom|left|end"
+
+        />
+
+</android.support.design.widget.CoordinatorLayout>
