Esclusa la activity main

--- a/app/src/main/res/layout/activity_inno_text.xml
+++ b/app/src/main/res/layout/activity_inno_text.xml
@@ -22,12 +22,12 @@
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <android.support.v7.widget.Toolbar
+            <it.trumbl.ilprofeticoDaniele.MarqueeToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay" />
+                app:popupTheme="@style/AppTheme.PopupOverlay"></it.trumbl.ilprofeticoDaniele.MarqueeToolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
@@ -35,11 +35,23 @@
     <include layout="@layout/content_inno_text" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/fabplus"
+        style="@style/FabStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabMinus"
+        style="@style/FabStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginRight="50dp"
+        android:src="@drawable/ic_action_minus"
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="left|bottom|end" />
 
 </android.support.design.widget.CoordinatorLayout>
