--- a/app/src/main/res/layout/row_himno.xml
+++ b/app/src/main/res/layout/row_himno.xml
@@ -4,6 +4,13 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/prefered_himn"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+
+        android:background="@color/colorAccent"
+        android:src="@drawable/ic_star_white_24dp" />
     <TextView
         android:id="@+id/numero_himno"
         android:layout_width="64dp"
@@ -13,10 +20,11 @@
         android:textColor="@color/blackText" />
 
     <TextView
-        android:id="@+id/titulo_himno"
+        android:id="@+id/title_himno"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/activity_vertical_margin"
         android:text="titolo inno"
         android:textColor="@color/blackText" />
+
 </LinearLayout>
