--- a/app/src/main/res/layout/content_inno_text.xml
+++ b/app/src/main/res/layout/content_inno_text.xml
@@ -8,11 +8,25 @@
     tools:context="it.trumbl.ilprofeticoDaniele.InnoTextActivity"
     tools:showIn="@layout/activity_inno_text">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingTop="24dp">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp">
     <TextView
         android:id="@+id/text_inno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
         android:text="@string/large_text" />
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
